@startuml

title __GOOGLE's Class Diagram__\n

  namespace com.itbird {
    namespace mvp.google {
      interface com.itbird.mvp.google.BasePresenter {
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.google {
      interface com.itbird.mvp.google.BaseView {
          {abstract} + setPresenter()
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.google {
      interface com.itbird.mvp.google.TaskDetailContract {
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.google {
      interface com.itbird.mvp.google.TaskDetailContract.Presenter {
          {abstract} + loadDataFromModel()
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.google {
      interface com.itbird.mvp.google.TaskDetailContract.View {
          {abstract} + updateTextView()
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.google {
      class com.itbird.mvp.google.TaskGoogleActivity {
          {static} - TAG : String
          - mTextView : TextView
          + setPresenter()
          + updateTextView()
          # onCreate()
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.google {
      class com.itbird.mvp.google.TaskGooglePresenter {
          {static} - TAG : String
          + TaskGooglePresenter()
          + loadDataFromModel()
      }
    }
  }
  

  com.itbird.mvp.google.TaskDetailContract +-down- com.itbird.mvp.google.TaskDetailContract.Presenter
  com.itbird.mvp.google.TaskDetailContract +-down- com.itbird.mvp.google.TaskDetailContract.View
  com.itbird.mvp.google.TaskGoogleActivity .up.|> com.itbird.mvp.google.TaskDetailContract.View
  com.itbird.mvp.google.TaskGoogleActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.itbird.mvp.google.TaskGoogleActivity o-- com.itbird.mvp.google.TaskDetailContract.Presenter : mPresenter
  com.itbird.mvp.google.TaskGooglePresenter .up.|> com.itbird.mvp.google.TaskDetailContract.Presenter
  com.itbird.mvp.google.TaskGooglePresenter o-- com.itbird.mvp.google.TaskDetailContract.View : mView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
